Add Google sign in button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Torus OpenLogin</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="not_logged_in">Not logged in</string>
 </resources>
