--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Torus OpenLogin</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="not_logged_in">Not logged in</string>
+    <string name="sign_out">Sign out</string>
 </resources>
