--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Torus Web3uth</string>
-    <string name="openlogin_project_id">BCtbnOamqh0cJFEUYA0NB5YkvBECZ3HLZsKfvSRBvew2EiiKW3UxpyQASSR0artjQkiUOCHeZ_ZeygXpYpxZjOs</string>
+    <string name="web3auth_project_id">BCtbnOamqh0cJFEUYA0NB5YkvBECZ3HLZsKfvSRBvew2EiiKW3UxpyQASSR0artjQkiUOCHeZ_ZeygXpYpxZjOs</string>
     <string name="sign_in">Sign in</string>
     <string name="not_logged_in">Not logged in</string>
     <string name="sign_out">Sign out</string>
