--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Torus Web3uth</string>
+    <string name="app_name">Torus Web3Auth</string>
     <string name="openlogin_project_id">BCtbnOamqh0cJFEUYA0NB5YkvBECZ3HLZsKfvSRBvew2EiiKW3UxpyQASSR0artjQkiUOCHeZ_ZeygXpYpxZjOs</string>
     <string name="sign_in">Sign in</string>
     <string name="not_logged_in">Not logged in</string>
