feat: add WebViewActivity.kt and setupMfa() function
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="not_logged_in">Not logged in</string>
     <string name="sign_out">Sign out</string>
     <string name="launch_wallet_services">Launch Wallet Services</string>
+    <string name="mfa">SetUp MFA</string>
 </resources>
