feat: added launchClaimFlow in Web3Auth.kt and modify example
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="sign_in">Sign in</string>
     <string name="not_logged_in">Not logged in</string>
     <string name="sign_out">Sign out</string>
+    <string name="claim">Claim Flow</string>
     <string name="launch_wallet_services">Launch Wallet Services</string>
     <string name="mfa">SetUp MFA</string>
 </resources>
