feat: changes for pass keys
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="send_tx">Send Transaction</string>
     <string name="sign_result">Get Sign Result</string>
     <string name="mfa">SetUp MFA</string>
+    <string name="passkey_signup">SignUp with PassKey</string>
 </resources>
