--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Web3Auth</string>
     <string name="asset_statements" translatable="false">
 [{
-  \"include\": \"https://signin.example.com/.well-known/assetlinks.json\"
+  \"include\": \https://web3auth.io/.well-known/assetlinks.json\"
 }]
 </string>
 </resources>
