feat: code refactored
Signed-off-by: Gaurav Goel <gaurav@tor.us>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="passkey_signup">SignUp with PassKey</string>
     <string name="asset_statements" translatable="false">
 [{
-  \"include\": \"https://signin.example.com/.well-known/assetlinks.json\"
+  \"include\": \"https://web3auth.io/.well-known/assetlinks.json\"
 }]
 </string>
 </resources>
